Refs #13052 !strict Fixed a problem where position of the right icon shifts between adjacent ListItems.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@26411 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/ListItem.less
+++ b/mobile/themes/common/ListItem.less
@@ -52,6 +52,7 @@
 .mblListItemRightIcon2 {
 	position: relative;
 	float: right;
+	line-height: normal;
 	.mblListItemRightIcon-styles;
 }
 .mblListItemRightText {
